samples/_failures_safe/1761444221_1bc408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3963c823.c: In function ‘main’:
./samples/SAFE/__tmp_3963c823.c:145:27: error: expected ‘)’ at end of input
  145 |     addEdge(graph, 0, 1, 2
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_3963c823.c:145:5: error: expected declaration or statement at end of input
  145 |     addEdge(graph, 0, 1, 2
      |     ^~~~~~~
